plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.node-gradle.node' version '7.1.0'
}

// ... (Group, Version, Java Toolchain wie gehabt)
group = 'schaefinik'
version = '0.0.2-ALPHA'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
// --- SPEZIAL TASKS ---
tasks.named('clean') {
    delete "${project.projectDir}/src/main/resources/static/assets"
    delete "${project.projectDir}/src/main/resources/static/index.html"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    failOnNoDiscoveredTests = false
}
// 1. Deep Clean: Löscht Build-Artefakte UND node_modules
tasks.register('deepClean', Delete) {
    dependsOn 'clean'
    delete "${project.projectDir}/frontend/node_modules"
    delete "${project.projectDir}/frontend/dist"
    delete "${project.projectDir}/src/main/resources/static"
}
// 2. DB Reset: Löscht alle Daten in Postgres (Docker basiert)
// Hilfs-Task: Stoppt die DB und löscht die Daten (Volumes)
tasks.register('dbStop', Exec) {
    workingDir ".."
    // "ignoreExitValue" verhindert, dass der Build abbricht, falls die DB gar nicht lief
    ignoreExitValue true 
    commandLine 'docker-compose', 'down', '-v'
}

// Hilfs-Task: Startet die DB neu
tasks.register('dbStart', Exec) {
    workingDir ".."
    commandLine 'docker-compose', 'up', '-d', 'db'
}

// Der eigentliche Reset-Befehl, den du aufrufst
tasks.register('dbReset') {
    group = 'database'
    description = 'Stoppt die DB, löscht alle Daten und startet sie neu.'
    
    dependsOn 'dbStop'
    dependsOn 'dbStart'
    
    // Sicherstellen, dass Start erst nach Stop ausgeführt wird
    dbStart.mustRunAfter dbStop
    
    doLast {
        println "Datenbank wurde erfolgreich zurückgesetzt."
    }
}
// 3. Local Build: Alles vorbereiten für den Start
tasks.register('devBuild') {
    group = 'build'
    dependsOn 'processResources'
    doLast {
        println "Projekt ist bereit für ./gradlew bootRun"
    }
}
// --- FRONTEND PIPELINE ---

node {
    version = '22.12.0'
    download = true
    nodeProjectDir = file("${project.projectDir}/frontend")
}

tasks.named('processResources') {
    dependsOn 'copyFrontendToStatic'
}

tasks.register('copyFrontendToStatic', Copy) {
    dependsOn 'buildFrontend'
    from("${project.projectDir}/frontend/dist")
    into("${project.projectDir}/src/main/resources/static")
}

tasks.register('buildFrontend', com.github.gradle.node.npm.task.NpmTask) {
    dependsOn 'npmInstall'
    args = ['run', 'build']
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
